--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@serwist/next": "^9.5.5",
     "chess.js": "^1.4.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
@@ -25,6 +26,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "serwist": "^9.5.5",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
