--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@serwist/next": "^9.5.5",
     "chess.js": "^1.4.0",
     "clsx": "^2.1.1",
